# routes/index.js
@@ -1,0 +1,6 @@
+const router = require('express').Router();
+
+router.use('/vehicles', require('./vehicles'));
+router.use('/dealerships', require('./dealership'));
+
+module.exports = router;
